Did now know that Safari was so awful...

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       </div>
       <section class="galeria">
         <div class="galeria-container">
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-1-463x383.jpg"
               alt="Image"
@@ -614,7 +614,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-2-463x383.jpg"
               alt="Image"
@@ -648,7 +648,7 @@
               alt="Image"
               class="img"
             />
-            <div class="modal-overlay">
+            <div class="modal-overlay" onclick="">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
@@ -670,7 +670,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-4-463x383.jpg"
               alt="Image"
@@ -698,7 +698,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-5-463x383.jpg"
               alt="Image"
@@ -726,7 +726,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-6-463x383.jpg"
               alt="Image"
@@ -754,7 +754,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-7-463x383.jpg"
               alt="Image"
@@ -782,7 +782,7 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-8-463x383.jpg"
               alt="Image"
