Orange color Modified and TO TOP button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- font-awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <title>Kairos</title>
   </head>
@@ -81,6 +81,8 @@
             </svg>
             Kairos<br />Days
           </a>
+          </a>
+      <button class="btn-top none"><i class="fa-solid fa-arrow-up"></i></button>
           <button class="btn nav-btn">
             <i class="fas fa-align-justify"></i>
           </button>
