Added the smooth animation on the ON TOP button

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Kairos<br />Days
           </a>
           </a>
-      <button class="btn-top none"><i class="fa-solid fa-arrow-up"></i></button>
+      <button class="btn-top none" onclick='window.scrollTo({top: 0, behavior: "smooth"});'><i class="fa-solid fa-arrow-up"></i></button>
           <button class="btn nav-btn">
             <i class="fas fa-align-justify"></i>
           </button>
