Logic to the modal

--- a/index.html
+++ b/index.html
@@ -588,6 +588,8 @@
       </div>
       <section class="galeria">
         <div class="galeria-container">
+          <div class="open-modal"></div>
+          <div class="open-container">hola</div>
           <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-1-463x383.jpg"
@@ -644,13 +646,13 @@
               </svg>
             </div>
           </div>
-          <div class="relative">
+          <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-3-463x383.jpg"
               alt="Image"
               class="img"
             />
-            <div class="modal-overlay" onclick="">
+            <div class="modal-overlay">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
