Modal implemented on the website

--- a/index.html
+++ b/index.html
@@ -589,7 +589,10 @@
       <section class="galeria">
         <div class="galeria-container">
           <div class="open-modal"></div>
-          <div class="open-container">hola</div>
+          <div class="open-container">
+            <button class="btn-prev"><i class="fa-solid fa-arrow-left"></i></button>
+            <button class="btn-next"><i class="fa-solid fa-arrow-right"></i></button>
+          </div>
           <div class="relative" onclick="">
             <img
               src="./assets/images/gallery-home-1-463x383.jpg"
